--- a/static/style.css
+++ b/static/style.css
@@ -21,3 +21,15 @@ border-radius: 10px;
     border-radius: 0px;
     background-color: transparent;
 }
+
+.toggle-trigger {
+    color: black;
+}
+
+.toggle-target tr:nth-child(n+6) {
+    display: none;
+}
+
+.toggle-target.toggle-open tr:nth-child(n+6) {
+    display: table-row;
+}
