--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -10,8 +10,14 @@
 </a>
 </p>
 <p style="text-align:right">スコア取得日時 {{utime.time}}</p>
+{% if league == 'J1' or league == 'J2' %}
+<div id="{{league}}" class="border7-target" style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
+{% elif league == 'J3' %}
+<div id="{{league}}" class="border8-target" style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
+{% else %}
 <div style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
-<table>
+{% endif %}
+<table class="table table-striped table-borderless">
 <tr style="color:{{fontcolor}}">
 <th>順位</th>
 <th>プレイヤー名</th>
@@ -37,6 +43,11 @@
 {% endfor %}
 </tbody>
 </table>
+{% if league == 'J1' or league == 'J2' %}
+<a class="border7-trigger" href="#{{league}}">すべて表示</a>
+{% elif league == 'J3' %}
+<a class="border8-trigger" href="#{{league}}">すべて表示</a>
+{% endif %}
 </div>
 <hr>
 <h2 style="text-align:center">譜面別リーグ内順位</h2>
@@ -52,8 +63,8 @@
 <img src="{% static 'icon.png' %}" style="height:20px;width:20px">
 </a>
 </p>
-<div style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
-<table>
+<div id="{{LB.map.bsr}}" class="top5-target" style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
+<table class="table table-striped table-borderless">
 <tr style="color:{{fontcolor}}">
 <th>順位</th>
 <th>プレイヤー名</th>
@@ -79,6 +90,9 @@
 {% endfor %}
 </tbody>
 </table>
+{% if LB.players|length > 5 %}
+<a class="top5-trigger" href="#{{LB.map.bsr}}">すべて表示</a>
+{% endif %}
 </div>
 {% endfor %}
 {% endblock %}
