--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 <div style="text-align:center;">
 <h3>現在、<a href="https://docs.google.com/forms/d/14dnWHcyIfWb2HYsLEcWrumvTexPNiH3TEw8CMYys-Yw/" target="blank">応募</a>受付中です！〆10/23（土）</h3>
 <p><a href='what'>JBSLとは？</a></p>
+<li><a href="/leaderboard/?league=J1">J1練習試合</a>　開催中！</li>
+<li><a href="/leaderboard/?league=J2">J2練習試合</a>　開催中！</li>
+<li><a href="/leaderboard/?league=J3">J3練習試合</a>　開催中！</li>
 </div>
 <hr style="color:orange">
 {% comment %} {% if news|length > 0 %}
@@ -15,7 +18,6 @@
 {% endfor %}
 {% endif %} {% endcomment %}
 <p style="text-align:right;color:white">スコア取得日時 {{utime.time}}</p>
-{% comment "j1" %}{% endcomment %}
 {% for T in total_league %}
 <h3 style="text-align:center;color:{{T.leagueinfo.fontcolor}};margin-top:20px">
 {{T.leagueinfo.league}} リーグ
@@ -33,7 +35,7 @@
 <tbody style="color:black">
 {% for p in T.players %}
 <tr>
-<td width="200">
+<td width="250">
 <img src="{% static 'users/' %}{{p.sid}}.jpg" style="height:30px;width:30px;border-radius:15px;">
 {{p.name | truncatechars:10}}
 <a class="trans" href="https://scoresaber.com/u/{{p.sid}}" target="blank">
@@ -41,12 +43,15 @@
 </a>
 {% if p.abstein %}（棄権）{% endif %}
 </td>
-<td width="200">{{p.pp3|floatformat:2}}</td>
+<td width="100">{{p.pp3|floatformat:2}}</td>
 <td>{{p.profile}}</td>
 </tr>
 {% endfor %}
 </tbody>
 </table>
+{% comment %} {% if T.players|length > 5 %}
+<a class="toggle-trigger" href="#{{T.leagueinfo.league}}">すべて表示</a>
+{% endif %} {% endcomment %}
 </div>
 {% endfor %}
 
