--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -10,14 +10,8 @@
 </a>
 </p>
 <p style="text-align:right">スコア取得日時 {{utime.time}}</p>
-{% if league == 'J1' or league == 'J2' %}
-<div id="{{league}}" class="border7-target" style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
-{% elif league == 'J3' %}
 <div id="{{league}}" class="border8-target" style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
-{% else %}
-<div style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
-{% endif %}
-<table class="table table-striped table-borderless">
+<table class="table table-striped table-borderless" >
 <tr style="color:{{fontcolor}}">
 <th>順位</th>
 <th>プレイヤー名</th>
@@ -28,31 +22,30 @@
 {% for s in scored_rank %}
 <tr>
 {% if s.abstein %}
-<td width="50px">--</td>
+<td width="20px">--</td>
 {% else %}
-<td width="50px">#{{s.rank}}</td>
+<td width="20px">#{{s.rank}}</td>
 {% endif %}
-<td width="150px">
+<td width="50px">
+<img src="{% static 'users/' %}{{s.sid}}.jpg" style="height:30px;width:30px;border-radius:15px;">
 {{s.name}}
 {% if s.abstein %}（棄権）{% endif %}
 </td>
-<td width="100px">{{s.pos}}</td>
-<td width="100px">{{s.acc|floatformat:2}}</td>
+<td width="50px">{{s.pos}}</td>
+<td width="250px">{{s.acc|floatformat:2}}</td>
 </tr>
 <p>{{t.name}}</p>
 {% endfor %}
 </tbody>
 </table>
-{% if league == 'J1' or league == 'J2' %}
-<a class="border7-trigger" href="#{{league}}">すべて表示</a>
-{% elif league == 'J3' %}
-<a class="border8-trigger" href="#{{league}}">すべて表示</a>
-{% endif %}
+<a class = "border8-trigger" href="#{{league}}">すべて表示</a>
 </div>
 <hr>
 <h2 style="text-align:center">譜面別リーグ内順位</h2>
 {% for LB in LBs%}
-<p><span style="font-size:22px;font-weight:bold">{{LB.map.title}} <span style="color:{{LB.color}}">{{LB.map.label}}</span></span> by {{LB.map.author}}
+
+<p><span style="font-size:22px;font-weight:bold">{{LB.map.title}} <span
+style="color:{{LB.color}}">{{LB.map.label}}</span></span> by {{LB.map.author}}
 <a href="https://beatsaver.com/maps/{{LB.map.bsr}}" target="blank">
 <img src="{% static 'beatsaver.png' %}" style="height:20px;width:20px">
 </a>
@@ -63,7 +56,12 @@
 <img src="{% static 'icon.png' %}" style="height:20px;width:20px">
 </a>
 </p>
-<div id="{{LB.map.bsr}}" class="top5-target" style="background-color:{{bgcolor}};padding:50px;border-radius:20px">
+<div id="{{LB.map.diff}}" class="top5-target" style="background-color:{{bgcolor}};padding:30px;border-radius:20px">
+<div style="display:inline-block;vertical-align:top;width:10%">
+<img src="https://scoresaber.com/imports/images/songs/{{LB.map.hash}}.png"
+style="height:128px;width:128px;border-radius:10px;border:solid;border-color:black">
+</div>
+<div style="display:inline-block;width:85%">
 <table class="table table-striped table-borderless">
 <tr style="color:{{fontcolor}}">
 <th>順位</th>
@@ -74,25 +72,29 @@
 <tbody style="color:black">
 {% for p in LB.players %}
 <tr>
-<td width="50px">
+<td width="20px">
 {% if p.abstein %}
 --
 {% else %}
 #{{p.rank}}
 {% endif %}
 </td>
-<td width="150px">{{p.name}}
+<td width="20px">
+<img src="{% static 'users/' %}{{p.sid}}.jpg"
+style="height:30px;width:30px;border-radius:15px;">
+{{p.name}}
 {% if p.abstein %}（棄権）{% endif %}
 </td>
-<td width="100px">{{p.pos}}</td>
-<td width="100px">{{p.acc|floatformat:2}}%</td>
+<td width="20px">{{p.pos}}</td>
+<td width="200px">{{p.acc|floatformat:2}}%</td>
 </tr>
 {% endfor %}
 </tbody>
 </table>
-{% if LB.players|length > 5 %}
-<a class="top5-trigger" href="#{{LB.map.bsr}}">すべて表示</a>
+{% if scored_rank|length > 5 %}
+<a class="top5-trigger" href="#{{LB.map.diff}}">すべて表示</a>
 {% endif %}
+</div>
 </div>
 {% endfor %}
 {% endblock %}
