--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -28,8 +28,9 @@
 <tr style="color:{{Linfo.fontcolor}}">
 <th>順位</th>
 <th>プレイヤー名</th>
-<th>総合<br>順位点</th>
-<th>総合<br>精度</th>
+<th>有効<br>順位点</th>
+<th>有効<br>譜面</th>
+<th>有効<br>精度</th>
 <th>ひとこと</th>
 </tr>
 </thead>
@@ -43,12 +44,15 @@
 #{{s.rank}}
 {% endif %}
 </td>
-<td width="150px">
+<td width="250px">
 <img src="{% static 'users/' %}{{s.player.sid}}.jpg" style="height:30px;width:30px;border-radius:15px;">
 {{s.player.name}}
 {% if s.player.abstein %}（棄権）{% endif %}
 </td>
-<td width="70px">{{s.pos}}</td>
+<td width="70px">
+{{s.pos}}
+</td>
+<td width="70px">{{s.valid}}</td>
 <td width="70px">{{s.acc|floatformat:2}}</td>
 <td>{{s.player.profile}}</td>
 </tr>
@@ -79,30 +83,31 @@ style="color:{{LB.color}}">{{LB.map.label}}</span></span> by {{LB.map.author}}
 <img src="https://scoresaber.com/imports/images/songs/{{LB.map.hash}}.png"
 style="height:128px;width:128px;border-radius:10px;border:solid;border-color:black">
 <table class="table table-striped table-borderless" style="margin-left:30px">
+<thead>
 <tr style="color:{{Linfo.fontcolor}}">
 <th>順位</th>
 <th>プレイヤー名</th>
 <th>順位点</th>
 <th>精度</th>
 </tr>
+</thead>
 <tbody style="color:black">
 {% for p in LB.players %}
 <tr>
-<td width="20px">
+<td width="50px">
 {% if p.abstein or p.acc == 0 %}
 --
 {% else %}
 #{{p.rank}}
 {% endif %}
 </td>
-<td width="20px">
-<img src="{% static 'users/' %}{{p.sid}}.jpg"
-style="height:30px;width:30px;border-radius:15px;">
-{{p.name}}
-{% if p.abstein %}（棄権）{% endif %}
+<td width="250px">
+<img src="{% static 'users/' %}{{p.player.sid}}.jpg" style="height:30px;width:30px;border-radius:15px;">
+{{p.player.name}}
+{% if p.player.abstein %}（棄権）{% endif %}
 </td>
-<td width="20px">{{p.pos}}</td>
-<td width="200px">{{p.acc|floatformat:2}}%</td>
+<td width="70px">{{p.pos}}</td>
+<td>{{p.acc|floatformat:2}}%</td>
 </tr>
 {% endfor %}
 </tbody>
