--- a/static/style.css
+++ b/static/style.css
@@ -1,23 +1,19 @@
 a {
- 
-color:orange;
-text-decoration: none;
- 
+    color: orange;
+    text-decoration: none;
 }
 
 a:hover {
- 
-color:black;
-background-color: orange;
-text-decoration: none;
-padding:5px;
-border-radius: 10px;
- 
+    color: black;
+    background-color: orange;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 10px;
 }
 
-.trans:hover{
+.trans:hover {
     text-decoration: none;
-    padding:0px;
+    padding: 0px;
     border-radius: 0px;
     background-color: transparent;
 }
@@ -25,9 +21,11 @@ border-radius: 10px;
 .top5-trigger {
     color: black;
 }
+
 .top5-target tr:nth-child(n+6) {
     display: none;
 }
+
 .top5-target.top5-open tr:nth-child(n+6) {
     display: table-row;
 }
@@ -35,9 +33,11 @@ border-radius: 10px;
 .border7-trigger {
     color: black;
 }
+
 .border7-target tr:nth-child(n+8) {
     display: none;
 }
+
 .border7-target.border7-open tr:nth-child(n+8) {
     display: table-row;
 }
@@ -45,9 +45,83 @@ border-radius: 10px;
 .border8-trigger {
     color: black;
 }
+
 .border8-target tr:nth-child(n+9) {
     display: none;
 }
+
 .border8-target.border8-open tr:nth-child(n+9) {
     display: table-row;
+}
+
+
+/* マウスオンする要素とツールチップを横並びにする */
+
+.c-tooltip {
+    display: inline-block;
+    position: relative;
+}
+
+
+/* ツールチップ共通の設定 */
+
+.c-tooltip::before,
+.c-tooltip::after {
+    /* -webkit-transition: all 0.2s; */
+    opacity: 0;
+    position: absolute;
+    /* transition: all 0.2s; */
+    visibility: hidden;
+    z-index: 11;
+}
+
+
+/* ツールチップ吹き出しのひげ */
+
+.c-tooltip::before {
+    -webkit-transform: translateY(-50%);
+    border-color: transparent #5f6368 transparent transparent;
+    border-style: solid;
+    border-width: 3px 7px 3px 0;
+    content: "";
+    height: 0;
+    left: calc(100% + 6px);
+    top: 50%;
+    transform: translateY(-50%);
+    width: 0;
+}
+
+
+/* ツールチップ吹き出しの本体 */
+
+.c-tooltip::after {
+    -webkit-transform: translateY(-50%);
+    background: #5f6368;
+    border-radius: 3px;
+    color: #fff;
+    content: attr(data-tooltip);
+    /* ここでdata-tooltipの内容を呼び出しているよ */
+    display: block;
+    left: calc(100% + 13px);
+    padding: 5px 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    white-space: nowrap;
+}
+
+
+/* マウスオンしたときのカーソルの設定 */
+
+.c-tooltip:hover {
+    cursor: pointer;
+}
+
+.c-tooltip:hover::before {
+    opacity: 1;
+    visibility: visible;
+}
+
+.c-tooltip:hover::after {
+    opacity: 1;
+    visibility: visible;
 }
